Adding in settings menu to allow users to explicitly exclude environment variables from being included in the Settings Summary output.

--- a/src/main/resources/messages/envVarMain_de.properties
+++ b/src/main/resources/messages/envVarMain_de.properties
@@ -1,1 +1,5 @@
 environment.variables=Umgebungsvariablen
+environment.variables.settings=Umgebungsvariablen Einstellungen
+exclude.variable.names=Variablennamen ausschließen
+exclude.variable.names.tooltip=Mehrere Umgebungsvariablen können durch Kommatrennung ausgeschlossen werden
+exclude.variable.table.tooltip=Aktuelle Umgebungsvariablen - die rot markierten Felder sind bereits als ausgeschlossen markiert
