--- a/src/main/resources/messages/envVarMain_en.properties
+++ b/src/main/resources/messages/envVarMain_en.properties
@@ -1,1 +1,5 @@
 environment.variables=Environment Variables
+environment.variables.settings=Environment Variables Settings
+exclude.variable.names=Exclude Variable Names
+exclude.variable.names.tooltip=Multiple environment variables can be excluded by comma separation
+exclude.variable.table.tooltip=Current Environment Variables - those in red are already marked as excluded
