--- a/src/main/resources/messages/envVarMain_es.properties
+++ b/src/main/resources/messages/envVarMain_es.properties
@@ -1,1 +1,5 @@
 environment.variables=Variables de entorno
+environment.variables.settings=Configuraciones de variables de entorno
+exclude.variable.names=Excluir nombres de variables
+exclude.variable.names.tooltip=Varias variables de entorno se pueden excluir por separación de coma
+exclude.variable.table.tooltip=Variables de entorno actuales: las que están en rojo ya están marcadas como excluidas
