--- a/src/main/resources/messages/envVarMain_fr.properties
+++ b/src/main/resources/messages/envVarMain_fr.properties
@@ -1,1 +1,5 @@
 environment.variables=Variables d'environnement
+environment.variables.settings=Paramètres des variables d'environnement
+exclude.variable.names=Exclure les noms de variables
+exclude.variable.names.tooltip=Les variables d'environnement multiples peuvent être exclues par la séparation des virgules
+exclude.variable.table.tooltip=Variables d'environnement actuelles - celles en rouge sont déjà marquées comme exclues
