--- a/src/main/resources/messages/envVarMain_ru.properties
+++ b/src/main/resources/messages/envVarMain_ru.properties
@@ -1,1 +1,5 @@
 environment.variables=Переменные среды
+environment.variables.settings=Параметры переменных среды
+exclude.variable.names=Исключить переменные имена
+exclude.variable.names.tooltip=Множественные переменные среды могут быть исключены путем разделения запятой
+exclude.variable.table.tooltip=Текущие переменные среды - красные уже отмечены как исключенные
